--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 upstream api_server {
-    server api_1:80;
-    server api_2:80;
-    server api_3:80;
+    server api_cuda_1:80;
+    server api_cuda_2:80;
+    server api:80;
 }
 
 server {
